--- a/client/src/components/UI/Modal.css
+++ b/client/src/components/UI/Modal.css
@@ -8,7 +8,7 @@
   background-color: white;
   width: 700px;
   max-width: 80%;
-  max-height: 90vh;
+  max-height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -16,11 +16,11 @@
 
 .modal-header {
   background-color: white;
-  /* height: fit-content; */
   text-align: center;
-  margin: 0;
-  position: sticky;
-  top: 0;
+}
+
+.modal-title {
+  margin: 10px 0 5px 0;
 }
 
 .modal-content {
@@ -53,6 +53,6 @@
 @media screen and (max-width: 600px) {
   .modal {
     max-width: 100%;
-    max-height: 100vh;
+    max-height: 100%;
   }
 }
